gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail72.d
version https://git-lfs.github.com/spec/v1
oid sha256:7895e0e231c56d220f689eba20f8e1316795f9569fe938457e1eaed814e926e5
size 146
